--- a/w4d4/solution/app/views/cats/edit.html.erb
+++ b/w4d4/solution/app/views/cats/edit.html.erb
@@ -3,3 +3,8 @@
   <%= render "shared/errors" %>
   <%= render "form", cat: @cat %>
 </div></section>
+<% content_for :footer %>
+<p>
+  If your cat wasnt perfect, our machines can fix them.
+</p>
+<% end %>
