--- a/w4d4/solution/app/views/cats/index.html.erb
+++ b/w4d4/solution/app/views/cats/index.html.erb
@@ -17,3 +17,8 @@
     <% end %>
   </section>
 </section>
+<% content_for :footer do %>
+<p>
+  Cats are the enemy. Money is what we aim for.
+</p>
+<% end %>
