--- a/w4d4/solution/app/views/layouts/application.html.erb
+++ b/w4d4/solution/app/views/layouts/application.html.erb
@@ -24,5 +24,9 @@
 <main>
   <%= yield %>
 </main>
+<footer>
+  We don't actually like cats. We just exploit them for money.
+  <%= yield :footer %>
+</footer>
 </body>
 </html>
