--- a/w4d4/solution/app/views/cats/new.html.erb
+++ b/w4d4/solution/app/views/cats/new.html.erb
@@ -4,3 +4,6 @@
     <%= render "shared/errors" %>
     <%= render "form", cat: @cat %>
 </div></section>
+<% content_for :footer do %>
+<p>Rather than actually grabbing cats from the wild or your neighbors, you can use our machines to build cats!</p>
+<% end %>
