--- a/w4d4/solution/app/views/cats/show.html.erb
+++ b/w4d4/solution/app/views/cats/show.html.erb
@@ -41,3 +41,6 @@
     <%= link_to "Make new request", new_cat_rental_request_url %>
   <% end %>
 </div></section>
+<% content_for :footer do %>
+<p>Nothing makes us happier than exploiting your love of cats for financial gain.</p>
+<% end %>
