--- a/w4d4/solution/app/views/users/new.html.erb
+++ b/w4d4/solution/app/views/users/new.html.erb
@@ -4,10 +4,7 @@
     <%= render "shared/errors" %>
 
     <form action="<%= users_url %>" method="post">
-      <input
-        type="hidden"
-        name="authenticity_token"
-        value="<%= form_authenticity_token %>">
+      <%= auth_token %>
 
       <label for="user_username">User Name</label>
       <input type="text"
@@ -22,7 +19,14 @@
              id="user_password"
              value="<%= @user.password %>">
       <br>
+      <label for="email">Email</label>
+      <input type="text" name="email" value="" id="email">
 
       <input type="submit">
     </form>
 </div></section>
+<% content_for :footer do %>
+<p>
+  You'll love it here. Unless you don't like cats. Hopefully the money makes up for that.
+</p>
+<% end %>
